--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: fonts/lato/Lato-Regular.ttf
+        - asset: fonts/lato/Lato-Bold.ttf
+          weight: 700
+        - asset: fonts/lato/Lato-Light.ttf
+          weight: 300
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
