--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   universal_html: ^1.2.2
   device_simulator: ^0.9.6
   fluro: ^1.6.3
+  carousel_slider: ^2.0.0
+  url_launcher: ^5.4.5
 
   flutter:
     sdk: flutter
