--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   fluro: ^1.6.3
   carousel_slider: ^2.0.0
   url_launcher: ^5.4.5
+  url_launcher_web: ^0.1.1+2
 
   flutter:
     sdk: flutter
