--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,14 +21,13 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter_simple_dependency_injection: ^1.0.2+1
-  provider: ^4.0.4
-  universal_html: ^1.2.2
-  device_simulator: ^0.9.6
-  fluro: ^1.6.3
-  carousel_slider: ^2.0.0
-  url_launcher: ^5.4.5
-  url_launcher_web: ^0.1.1+2
+  flutter_simple_dependency_injection: ^1.0.4
+  provider: ^5.0.0-nullsafety.1
+  universal_html: ^1.2.3
+  fluro: ^1.7.8
+  carousel_slider: ^2.3.1
+  url_launcher: ^5.7.10
+  url_launcher_web: ^0.1.5+1
 
   flutter:
     sdk: flutter
